tests/typing/bad/testfile-affect-4.jl
mutable struct MyStruct a end
x = MyStruct(2)
x.b = 3
